--- a/index.html
+++ b/index.html
@@ -1,47 +1,39 @@
 <!DOCTYPE html>
   <head>
+  <title>LeahW on GitHub</title>
   <style>
-  body {
-    background-image: url("https://lh3.googleusercontent.com/-XoKh3pozV5A/VLhYZshj3mI/AAAAAAAAAmU/5g7P_LYZ0oY/w1117-h680-no/robomowatl.jpg");
-    background-size: cover;
-  }
-  p {
-    background-color: white;
-    background: -webkit-linear-gradient(top, rgba(255,255,255,1), rgba(255,255,255,.6));
-    background: -moz-linear-gradient(top, rgba(255,255,255,1), rgba(255,255,255,.6));
-    color: rgba(20,1,1,1);
-    font-size: 40px;
-  }
-  h1 {
-    color: rgba(10,200,10,1);
-    font-size: 50px;
-    text-align: justify;
-  }
-  div {
-    float: top;
-    background: white;
-    background: -webkit-linear-gradient(top, rgba(255,255,255,1), rgba(255,255,255,.4));
-    background: -moz-linear-gradient(top, rgba(255,255,255,1), rgba(255,255,255,.4));
-  }
-  ul {
-    float: right;
-    background-color: rgba(255,255,255,.5);
-  }
-  li {
-    font-size: 27px;
-    line-height: 2;
-  }
-   </style>
+  <link href='css/bootstrap.css' rel='stylesheet'>
+  </style>
   </head>
+  
   <body>
-  <div>
-  <p><h1>GitHub Page for LeahW</h1></p>
+  <div class="navbar navbar-default">
+  <div class="container">
+  <p><a href="http://github.com/LeahW" data-target="#" class="navbar-brand">GitHub Page for LeahW</a></p>
   </div>
-     <p>Come visit my GitHub page at <a href='https://github.com/LeahW'>GitHub.com/LeahW</a> and let's get started building software together!</p>
-  <br>
-  <ul>
-    <li><a href="http://www.RobomowATL.com"><b>RobomowATL</b></a></li>
-    <li><a href="http://www.linkedin.com/pub/leah-williamson/a6/358/b56"><b>Connect with me on Linked In!</b></a></li>
-    <li><a href="http://twitter.com/ATLeah"><b>Follow @ATLeah on Twitter!</b></a></li>
+  </div>
+  
+  <div class="container well"
+     <p>Come visit my GitHub page at
+     <a href="https://github.com/LeahW">GitHub.com/LeahW</a>
+     and let's get started building software together!</p>
+  </div>
+    
+  
+  <ul class='nav navbar-nav navbar-right'>
+    <li><a href="http://www.RobomowATL.com">RobomowATL.com</a></li>
+    <li><a href="http://www.linkedin.com/pub/leah-williamson/a6/358/b56">Connect with me on Linked In!</a></li>
+    <li><a href="http://twitter.com/ATLeah">Follow @ATLeah on Twitter!</a></li>
   </ul>
+  
+  <script src='js/jQuery.js'></script>
+  <script src='js/bootstrap.js'></script>
+  <script>
+    $(function() {
+        $('.nav-tabs a').click(function (e) {
+          e.preventDefault();
+          $(this).tab('show');
+        });
+      });
+  </script>
   </body>
