--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <head>
   <title>LeahW on GitHub</title>
   <style>
-  <link href='css/bootstrap.css' rel='stylesheet'>
+  <link href='https://leahw.github.io/css/bootstrap.css' rel='stylesheet'>
   </style>
   </head>
   
@@ -34,8 +34,8 @@
   </ul>
 </div>
   
-  <script src='js/jQuery.js'></script>
-  <script src='js/bootstrap.js'></script>
+  <script src='https://leahw.github.io/js/jQuery.js'></script>
+  <script src='https://leahw.github.io/js/bootstrap.js'></script>
   <script>
     $(function() {
         $('.nav-tabs a').click(function (e) {
