--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <head>
   <title>LeahW on GitHub</title>
   <style>
-  <link href='https://github.com/leahw/leahw.github.io/css/bootstrap.css' rel='stylesheet'>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   </style>
   </head>
   
@@ -34,8 +34,8 @@
   </ul>
 </div>
   
-  <script src='https://github.com/leahw/leahw.github.io/js/jQuery.js'></script>
-  <script src='https://github.com/leahw/leahw.github.io/js/bootstrap.js'></script>
+  <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   <script>
     $(function() {
         $('.nav-tabs a').click(function (e) {
