--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <head>
   <title>LeahW on GitHub</title>
   <style>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
   </style>
   </head>
   
