--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <p><a href="http://github.com/LeahW" data-target="#" class="navbar-brand">GitHub Page for LeahW</a></p>
   </div>
   </div>
-  <div class="well-lg container col-md-6 col-md-offset-3">
+  <div class="well container col-md-6 col-md-offset-3">
   <div class="hidden-xs hidden-sm">
     <img src="https://lh3.googleusercontent.com/-AjXUeYFANjY/VLfi2vwYezI/AAAAAAAAAj4/i14h3u3LIu4/w923-h615-no/RaspberryPiinhand.jpg" class="img-responsive"> </img>
    </div> 
   </div>
     
   
-  <div class="container well col-md-6 col-md-offset-3">
+  <div class="container well col-md-8 col-md-offset-2">
     <div class="row text-center">
      <p><h1>Come visit my GitHub page at
      <a href="https://github.com/LeahW">GitHub.com/LeahW</a>
