--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </div>
   <div class="well container col-md-6 col-md-offset-3">
   <div class="hidden-xs hidden-sm">
-    <img src="https://lh3.googleusercontent.com/-AjXUeYFANjY/VLfi2vwYezI/AAAAAAAAAj4/i14h3u3LIu4/w923-h615-no/RaspberryPiinhand.jpg" class="img-rounded"> </img>
+    <img src="https://lh3.googleusercontent.com/-AjXUeYFANjY/VLfi2vwYezI/AAAAAAAAAj4/i14h3u3LIu4/w923-h615-no/RaspberryPiinhand.jpg" class="img-responsive img-rounded"> </img>
    </div> 
   </div>
     
