--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <p><a href="http://github.com/LeahW" data-target="#" class="navbar-brand">GitHub Page for LeahW</a></p>
   </div>
   </div>
-  <div class="container col-md-8 col-md-offset-2">
+  <div class="container col-md-4 col-md-offset-4">
   <div class="hidden-xs hidden-sm">
     <img src="https://lh3.googleusercontent.com/-AjXUeYFANjY/VLfi2vwYezI/AAAAAAAAAj4/i14h3u3LIu4/w923-h615-no/RaspberryPiinhand.jpg" height="369" width="554" class="img-circle"> </img>
    </div> 
   </div>
-    <br>
+    <div class"row"></div>
   
   <div class="container well col-md-8 col-md-offset-2">
     <div class="row text-center">
