--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
   <p><a href="http://github.com/LeahW" data-target="#" class="navbar-brand">GitHub Page for LeahW</a></p>
   </div>
   </div>
-  <div class="container col-md-5 col-md-offset-3.5">
+  <div class="container col-md-6 col-md-offset-3">
   <div class="hidden-xs hidden-sm">
     <img src="https://lh3.googleusercontent.com/-AjXUeYFANjY/VLfi2vwYezI/AAAAAAAAAj4/i14h3u3LIu4/w923-h615-no/RaspberryPiinhand.jpg" height="369" width="554" class="img-circle"> </img>
    </div> 
   </div>
     <div class"row"></div>
   
-  <div class="container well col-md-8 col-md-offset-2">
+  <div class="container well col-md-6 col-md-offset-3">
     <div class="row text-center">
-     <p><h2>Come visit my GitHub page at
+     <p class="lead"><h2>Come visit my GitHub page at
      <a href="https://github.com/LeahW">GitHub.com/LeahW</a>
     and let's get started building software together!</h2></p>
   </div>
