--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <img src="https://lh3.googleusercontent.com/-AjXUeYFANjY/VLfi2vwYezI/AAAAAAAAAj4/i14h3u3LIu4/w923-h615-no/RaspberryPiinhand.jpg" height="369" width="554" class="img-circle"> </img>
    </div> 
   </div>
-    <div class"row"></div>
+    <div class"row col-md-12"></div>
   
   <div class="container well col-md-6 col-md-offset-3">
     <div class="row text-center">
