--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     .whitespace {
      margin: 15px;
     }
+    .img-circle {
+     border-width: 2px;
+     border-color: #bbbbbb;
+    }
   </style>
   </head>
   
