--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
      margin: 15px;
     }
     .img-circle {
-     border-width: 5px;
-     border-color: #bbbbbb;
+     border:; 5px solid gray;
     }
   </style>
   </head>
