--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      margin: 15px;
     }
     .img-circle {
-     border:; 5px solid gray;
+     border: 5px solid gray;
     }
   </style>
   </head>
