--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
   <div class="navbar navbar-default">
   <div class="container">
-  <p><a href="http://github.com/LeahW" data-target="#" class="navbar-brand">GitHub Page for LeahW</a></p>
+  <p><a href="http://github.com/LeahW" data-target="#" class="navbar-brand"><b>GitHub Page for LeahW</b></a></p>
   </div>
   </div>
   <div class="container col-md-6 col-md-offset-3">
