--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <p><a href="http://github.com/LeahW" data-target="#" class="navbar-brand"><b>GitHub Page for LeahW</b></a></p>
   </div>
   </div>
-  <div class="container col-md-6 col-md-offset-3">
+  <div class="container col-md-6 col-md-offset-4">
   <div class="hidden-xs hidden-sm">
     <img src="https://lh3.googleusercontent.com/-AjXUeYFANjY/VLfi2vwYezI/AAAAAAAAAj4/i14h3u3LIu4/w923-h615-no/RaspberryPiinhand.jpg" height="369" width="554" class="img-circle"> </img>
    </div> 
@@ -27,7 +27,7 @@
   
   <div class="container well col-md-10 col-md-offset-1">
     <div class="row text-center">
-     <p class="lead"><h2>Come visit my GitHub page at
+     <p><h2>Come visit my GitHub page at
      <a href="https://github.com/LeahW">GitHub.com/LeahW</a>
     and let's get started building software together!</h2></p>
   </div>
