--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
     and let's get started building software together!</h2></p>
   </div>
 </div>
+<div class="row col-md-12 whitespace"></div>
+<div class="container well col-md-8 col-md-offset-3">
+ <h3>JS.andbox</h3>
+</div>
     
   <div class="container">
   <ul class='nav navbar-nav navbar-right'>
