--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
   </div>
 </div>
 <div class="row col-md-12 whitespace"></div>
-<div class="container well col-md-8 col-md-offset-3">
+<div class="container well col-md-6 col-md-offset-3">
  <h3>JS.andbox</h3>
+ <p>This is where I test code!</p>
+ <br>
+ 
 </div>
     
   <div class="container">
