--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </div>
 <div class="row col-md-12 whitespace"></div>
 <div class="container well col-md-6 col-md-offset-3">
- <h3><a href="https://github.com/LeahW/LeahW.github.io/JSandbox>JS.andbox</a></h3>
+ <h3><a href="https://github.com/LeahW/LeahW.github.io/JSandbox"> Js.andbox </a></a></h3>
  <p>This is where I test code!</p>
  <br>
  <button class='show'><p> Show </p> </button>
