--- a/JSandbox.html
+++ b/JSandbox.html
@@ -1,8 +1,31 @@
-// Landing page for JS.andbox, my practice page for JavaScript
 <head>
 <title>JS.andbox</title>
+<style>
+  .show {
+  background: purple;
+  height: 50px;
+  width: 100px;
+  }
+  .sandbox {
+  color: green;
+  }
+</style>
 </head>
 <body>
 <h1> JavaScript Experimentation in Progress! </h1>
+div class="row col-md-12 whitespace"></div>
+<div class="container well col-md-6 col-md-offset-3">
+ <h3>JS.andbox</h3>
+ <p>This is where I test code!</p>
+ <br>
+  <button class='show'><p> Show </p> </button>
+  <button class='sandbox'> Sandbox </button>
+  
+</div>
+<script>
+   $('button').on('click', function() {
+      $(this).toggleClass('show');
+    });
+</script>
 
 </body>
