--- a/JSandbox.html
+++ b/JSandbox.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <h1> JavaScript Experimentation in Progress! </h1>
-div class="row col-md-12 whitespace"></div>
+<div class="row col-md-12 whitespace"></div>
 <div class="container well col-md-6 col-md-offset-3">
  <h3>JS.andbox</h3>
  <p>This is where I test code!</p>
