--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   
   <div class="container well col-md-10 col-md-offset-1">
     <div class="row text-center">
-     <p><h2>Come visit my GitHub page at
+     <p><h2>Visit my GitHub Repository at
      <a href="https://github.com/LeahW">GitHub.com/LeahW</a>
-    and let's get started building software together!</h2></p>
+    !</h2></p>
   </div>
 </div>
 <div class="row col-md-12 whitespace"></div>
