--- a/JSandbox.html
+++ b/JSandbox.html
@@ -5,18 +5,7 @@
 .whitespace {
      margin: 15px;
     }
-    .img-circle {
-     border: 5px solid gray;
-    }
-  .show {
-  background: purple;
-  height: 50px;
-  width: 100px;
-  }
-  .sandbox {
-  color: green;
-  }
-</style>
+  </style>
 </head>
 <body>
 <h1> JavaScript Experimentation in Progress! </h1>
@@ -24,11 +13,11 @@
 <div class="container well col-md-6 col-md-offset-3">
  <h3>JS.andbox</h3>
  <p>This is where I test code!</p>
+ <div class="col-md-8"></div><div class="col-md-4">Smiley Generator: <button class='smiley'> Make a Face! </button></div>
+ <div class="col-md-8"></div>
+ <div class="col-md-8"></div>
  <br>
-  <button class='show'><p> Show </p> </button>
-  <button class='sandbox'> Sandbox </button>
-  
-</div>
+ </div>
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 <script>
