--- a/JSandbox.html
+++ b/JSandbox.html
@@ -5,6 +5,11 @@
 .whitespace {
      margin: 15px;
     }
+ .colorChange {
+      background: blue;
+      
+ }
+ 
   </style>
 </head>
 <body>
@@ -22,7 +27,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 <script>
    $('button').on('click', function() {
-      $(this).toggleClass('show');
+      $(this).toggleClass('colorChange');
     });
 </script>
 
