--- a/JSandbox.html
+++ b/JSandbox.html
@@ -9,6 +9,11 @@
       background: blue;
       
  }
+ .top {
+      background-image: url("https://lh6.googleusercontent.com/-CeSc0xomKGo/VOCzpuvojbI/AAAAAAAAAr0/ULkPyU55T9U/w508-h195-no/popttop.png");
+ 
+      
+ }
  
   </style>
 </head>
@@ -18,7 +23,7 @@
 <div class="container well col-md-6 col-md-offset-3">
  <h3>JS.andbox</h3>
  <p>This is where I test code!</p>
- <div class="col-md-8"></div><div class="col-md-4">Smiley Generator: <button class='smiley'> Make a Face! </button></div>
+ <div class="col-md-8"></div><div class="col-md-4">Smiley Generator: <button class='smiley'> Eyes </button></div>
  <div class="col-md-8"></div>
  <div class="col-md-8"></div>
  <br>
@@ -27,7 +32,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 <script>
    $('button').on('click', function() {
-      $(this).toggleClass('colorChange');
+      $(this).toggleClass('top');
     });
 </script>
 
