--- a/JSandbox.html
+++ b/JSandbox.html
@@ -12,7 +12,8 @@
  .top {
       background-image: url("https://lh6.googleusercontent.com/-CeSc0xomKGo/VOCzpuvojbI/AAAAAAAAAr0/ULkPyU55T9U/w508-h195-no/popttop.png");
  
-      
+height: 195 px;   
+width: 508 px;
  }
  
   </style>
