--- a/JSandbox.html
+++ b/JSandbox.html
@@ -24,9 +24,8 @@ width: 508px;
 <div class="container well col-md-6 col-md-offset-3">
  <h3>JS.andbox</h3>
  <p>This is where I test code!</p>
- <div class="col-md-8"></div><div class="col-md-4">Smiley Generator: <button class='smiley'> Eyes </button></div>
- <div class="col-md-8"></div>
- <div class="col-md-8"></div>
+ <div class="col-md-8">Smiley Generator: <button class='smiley'> Eyes </button></div>
+ 
  <br>
  </div>
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
