--- a/JSandbox.html
+++ b/JSandbox.html
@@ -24,7 +24,11 @@ width: 508px;
 <div class="container well col-md-6 col-md-offset-3">
  <h3>JS.andbox</h3>
  <p>This is where I test code!</p>
- <div class="col-md-8">Smiley Generator: <button class='smiley'> Eyes </button></div>
+ <br>
+ 
+ <div class="col-md-8"><button class='smiley1'> Eyes </button></div>
+ <div class="col-md-8"><button class='smiley2'> Eyes </button></div>
+ <div class="col-md-8"><button class='smiley3'> Eyes </button></div>
  
  <br>
  </div>
