--- a/JSandbox.html
+++ b/JSandbox.html
@@ -35,7 +35,7 @@ width: 508px;
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 <script>
-   $('button').on('click', function() {
+   $('.smiley1').on('click', function() {
       $(this).toggleClass('top');
     });
 </script>
