--- a/JSandbox.html
+++ b/JSandbox.html
@@ -16,13 +16,13 @@ height: 195px;
 width: 508px;
  }
  .middle {
-      background-image: url(https://lh5.googleusercontent.com/-L9k3ukEjS3E/VOCzpQLAVGI/AAAAAAAAArc/Ks1bONJE65I/w508-h90-no/poptmiddle.png);
+      background-image: url("https://lh5.googleusercontent.com/-L9k3ukEjS3E/VOCzpQLAVGI/AAAAAAAAArc/Ks1bONJE65I/w508-h90-no/poptmiddle.png");
  
-      height: 508px;
-      width:90px;
+      height: 90px;
+      width:508px;
  }
  .bottom {
-      background-image: url(https://lh5.googleusercontent.com/-f90FUqI6VuM/VOCzpYo6XbI/AAAAAAAAAr4/HMM2u8Q6qys/w509-h147-no/popbottom.png);
+      background-image: url("https://lh5.googleusercontent.com/-f90FUqI6VuM/VOCzpYo6XbI/AAAAAAAAAr4/HMM2u8Q6qys/w509-h147-no/popbottom.png");
  
 height: 147px;
 width: 509px;
