--- a/JSandbox.html
+++ b/JSandbox.html
@@ -53,7 +53,7 @@ width: 509px;
     $('.smiley2').on('click', function() {
          $(this).toggleClass('middle');
     });
-    $('smiley3').on('click', function() {
+    $('.smiley3').on('click', function() {
          $(this).toggleClass('bottom');
     });
 </script>
