--- a/JSandbox.html
+++ b/JSandbox.html
@@ -6,7 +6,7 @@
      margin: 15px;
     }
  .colorChange {
-      background: blue;
+      background: #f0fff0;
       
  }
  .top {
@@ -27,6 +27,9 @@ width: 508px;
 height: 147px;
 width: 509px;
 }
+.btn-msg {
+     background: #f00ff0;
+}
  
   </style>
 </head>
@@ -43,6 +46,9 @@ width: 509px;
  <div class="col-md-8"><button class='smiley3'> Mouth </button></div>
  
  <br>
+ <br>
+  <div class="message"><button class="btn-msg"> Personalized Greeting! </button></div>
+  
  </div>
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
@@ -56,6 +62,14 @@ width: 509px;
     $('.smiley3').on('click', function() {
          $(this).toggleClass('bottom');
     });
+    var msg = $('<p>Have a nice day, </p>');
+
+$('.btn-msg').on('click', function(name) { 
+var name = prompt("What is your name?")
+$('.message').append(msg); 
+  $('.message').append(name);
+  $(this).toggleClass('colorChange');
+ })
 </script>
 
 </body>
