--- a/JSandbox.html
+++ b/JSandbox.html
@@ -47,7 +47,7 @@ width: 509px;
  
  <br>
  <br>
-  <div class="message"><button class="btn-msg"> Personalized Greeting! </button></div>
+  <div class="row col-md-10 message"><button class="btn-msg"> Personalized Greeting! </button></div>
   
  </div>
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
