--- a/JSandbox.html
+++ b/JSandbox.html
@@ -68,7 +68,7 @@ width: 509px;
 $('.btn-msg').on('click', function(name) { 
 var name = prompt("What is your name?")
 $('.message').append(msg); 
-  $('.message').append(name);
+  $('.message').append(name+',');
   $('.message').append(msg2);
   $(this).toggleClass('colorChange');
  })
