--- a/JSandbox.html
+++ b/JSandbox.html
@@ -62,13 +62,13 @@ width: 509px;
     $('.smiley3').on('click', function() {
          $(this).toggleClass('bottom');
     });
-    var msg = $('<p> Hello, </p>');
-    var msg2 = $('<p> have a wonderful day! </p>');
+    
+    var msg2 = $('<p> have a <h2>wonderful</h2> day! </p>');
 
 $('.btn-msg').on('click', function(name) { 
 var name = prompt("What is your name?")
-$('.message').append(msg); 
-  $('.message').append(name+',');
+ 
+  $('.message').append('Hello, '+name+',');
   $('.message').append(msg2);
   $(this).toggleClass('colorChange');
  })
