--- a/JSandbox.html
+++ b/JSandbox.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="/css/main.css">
 <style>
 .whitespace {
-     margin: 15px;
+      margin: 15px;
     }
  .colorChange {
       background: #f0fff0;
@@ -12,8 +12,8 @@
  .top {
       background-image: url("https://lh6.googleusercontent.com/-CeSc0xomKGo/VOCzpuvojbI/AAAAAAAAAr0/ULkPyU55T9U/w508-h195-no/popttop.png");
  
-height: 195px;   
-width: 508px;
+     height: 195px;   
+     width: 508px;
  }
  .middle {
       background-image: url("https://lh5.googleusercontent.com/-L9k3ukEjS3E/VOCzpQLAVGI/AAAAAAAAArc/Ks1bONJE65I/w508-h90-no/poptmiddle.png");
@@ -35,7 +35,7 @@ width: 509px;
 </head>
 <body>
 <h1> JavaScript Experimentation in Progress! </h1>
-<div class="row col-md-12 whitespace"></div>
+<div class="container col-md-12 whitespace">
 <div class="container well col-md-6 col-md-offset-3">
  <h3>JS.andbox</h3>
  <p>This is where I test code!</p>
@@ -45,11 +45,14 @@ width: 509px;
  <div class="col-md-8"><button class='smiley2'> Nose </button></div>
  <div class="col-md-8"><button class='smiley3'> Mouth </button></div>
  
- <br>
- <br>
-  <div class="container well col-md-10 message"><button class="btn-msg"> Personalized Greeting! </button></div>
-  
  </div>
+ <br>
+  <div class="container well col-md-10"><button class="btn-msg"> Personalized Greeting! </button>
+       <span class="message">_</span>
+  </div>
+  </div>
+  
+ 
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 <script>
