--- a/JSandbox.html
+++ b/JSandbox.html
@@ -47,7 +47,7 @@ width: 509px;
  
  </div>
  <br>
-  <div class="container well col-md-10"><button class="btn-msg"> Personalized Greeting! </button>
+  <div class="container well col-md-8"><button class="btn-msg"> Personalized Greeting! </button>
        <span class="message">_</span>
   </div>
   </div>
@@ -66,13 +66,13 @@ width: 509px;
          $(this).toggleClass('bottom');
     });
     
-    var msg2 = $('<p> have a <h2>wonderful</h2> day! </p>');
-
+    
 $('.btn-msg').on('click', function(name) { 
-var name = prompt("What is your name?")
+var name = prompt("What is your name?");
+ var msg = $('<p>              --- LeahW </p>');
+  $('.message').append('Hello, '+name+', thanks for visiting my page!');
+  $('.message').append(msg);
  
-  $('.message').append('Hello, '+name+',');
-  $('.message').append(msg2);
   $(this).toggleClass('colorChange');
  })
 </script>
