--- a/JSandbox.html
+++ b/JSandbox.html
@@ -47,8 +47,8 @@ width: 509px;
  
  </div>
  <br>
-  <div class="container well col-md-8"><button class="btn-msg"> Personalized Greeting! </button>
-       <span class="message">_</span>
+  <div class="container well col-md-6 col-md-offset-3"><button class="btn-msg"> Personalized Greeting! </button>
+       <span class="message">: </span>
   </div>
   </div>
   
@@ -69,7 +69,7 @@ width: 509px;
     
 $('.btn-msg').on('click', function(name) { 
 var name = prompt("What is your name?");
- var msg = $('<p>              --- LeahW </p>');
+ var msg = $('<br><p>                                                                         --- LeahW </p>');
   $('.message').append('Hello, '+name+', thanks for visiting my page!');
   $('.message').append(msg);
  
