--- a/JSandbox.html
+++ b/JSandbox.html
@@ -69,11 +69,8 @@ width: 509px;
     
 $('.btn-msg').on('click', function(name) { 
 var name = prompt("What is your name?");
- var msg = $('<br><p>                                                                         --- LeahW </p>');
   $('.message').append('Hello, '+name+', thanks for visiting my page!');
-  $('.message').append(msg);
- 
-  $(this).toggleClass('colorChange');
+    $('button').toggleClass('colorChange');
  })
 </script>
 
