--- a/JSandbox.html
+++ b/JSandbox.html
@@ -69,7 +69,7 @@ width: 509px;
     
 $('.btn-msg').on('click', function(name) {
       $('.btn-msg').removeClass('btn-msg');
-      $(this).toggleClass('colorChange');
+      $(this).addClass('colorChange');
       
 var name = prompt("What is your name?");
 
