--- a/JSandbox.html
+++ b/JSandbox.html
@@ -38,7 +38,7 @@ width: 509px;
 <div class="container col-md-12 whitespace">
 <div class="container well col-md-6 col-md-offset-3">
  <h3>JS.andbox</h3>
- <p>This is where I test code!</p>
+ <p>This is where I test code: </p>
  <br>
  
  <div class="col-md-8"><button class='smiley1'> Eyes </button></div>
@@ -47,7 +47,7 @@ width: 509px;
  
  </div>
  <br>
-  <div class="container well col-md-6 col-md-offset-3"><button class="btn-msg"> Personalized Greeting! </button>
+  <div class="container well col-md-6 col-md-offset-3"><button class="btn-msg"> Personalized Greeting </button>
        <span class="message">: </span>
   </div>
   </div>
