--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 </div>
 <div class="row col-md-12 whitespace"></div>
 <div class="container well col-md-6 col-md-offset-3">
- <h3><a href="https://LeahW.github.io/JSandbox.html"> Js.andbox </a></a></h3>
- <p>This is where I test code!</p>
+ <h3><a href="https://LeahW.github.io/JSandbox.html"> JS.andbox </a></a></h3>
+ <p>A sandbox page where I test various bits of JavaScript that I'm learning. Frequently changes. Feel free to click around and explore! </p>
  
 </div>
     
