--- a/JSandbox.html
+++ b/JSandbox.html
@@ -51,7 +51,7 @@ width: 509px;
        <span class="message">: </span>
   </div>
   </div>
-  <div class="container well col-md-6 cold-md-offset-3 rando"><button class='rando-but'>Any random segment</button></div>
+  <div class="container well col-md-6 col-md-offset-3 rando"><button class='rando-but'>Any random segment</button></div>
   
  
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
@@ -76,7 +76,8 @@ var name = prompt("What is your name?");
 
   $('.message').append('Hello, '+name+', thanks for visiting my page! ');
     
- })
+ });
+ 
  $('.rando-but').on('click', function(){
  var random-top = Math.random();
  if (random-top < 0.34) {
