--- a/JSandbox.html
+++ b/JSandbox.html
@@ -78,6 +78,11 @@ var name = prompt("What is your name?");
     
  });
  
+ $('.rando-but').on('click', function() {
+       var rando = Math.random();
+       $('.rando').append('Random number: '+rando);
+ })
+ 
 </script>
 
 </body>
