--- a/JSandbox.html
+++ b/JSandbox.html
@@ -51,7 +51,7 @@ width: 509px;
        <span class="message">: </span>
   </div>
   </div>
-  <div class="container well col-md-6 col-md-offset-3 rando"><button class='rando-but'>Any random segment</button></div>
+  <div class="container well col-md-6 col-md-offset-3"><button class='rando-but'>Any random number:</button><span class='rando'>  </span></span></div>
   
  
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
