--- a/JSandbox.html
+++ b/JSandbox.html
@@ -79,7 +79,7 @@ var name = prompt("What is your name?");
  });
  
  $('.rando-but').on('click', function() {
-       var rando = Math.random();
+       var rando = Math.random()*10000;
        $('.rando').append(' Random number: '+rando);
  })
  
