--- a/JSandbox.html
+++ b/JSandbox.html
@@ -82,7 +82,7 @@ var name = prompt("What is your name?");
        var rando = Math.random()*10;
        $('.rando').append(' Random number: '+rando);
        if (rando >= 5) {
-             $('.rando').append(' low! ');
+             $('.rando-but').addClass('top');
        } else {
              $('.rando').append(' high! ');
        
