--- a/JSandbox.html
+++ b/JSandbox.html
@@ -20,6 +20,11 @@
        height: 195px;
        width: 508px;
  }
+ .top3 {
+       background-image: url("https://lh5.googleusercontent.com/-BQAleJyEXyg/VOCzqCRu-CI/AAAAAAAAArw/2NqweUS8iaE/w506-h196-no/startop.png");
+       height: 195px;
+       width: 508px;
+ }
  .middle {
       background-image: url("https://lh5.googleusercontent.com/-L9k3ukEjS3E/VOCzpQLAVGI/AAAAAAAAArc/Ks1bONJE65I/w508-h90-no/poptmiddle.png");
  
@@ -56,7 +61,7 @@ width: 509px;
        <span class="message">: </span>
   </div>
   </div>
-  <div class="container well col-md-6 col-md-offset-3"><button class='rando-but'>Any random number: </button><span class='rando'>  </span></span></div>
+  <div class="container well col-md-6 col-md-offset-3"><button class='rando-but'> Random Eyes </button><span class='rando'>  </span></span></div>
   
  
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
@@ -86,9 +91,12 @@ var name = prompt("What is your name?");
  $('.rando-but').on('click', function() {
        var rando = Math.random()*10;
        $('.rando').append('Eyes: '+rando);
-       if (rando >= 5) {
+       if (rando >= 7) {
              $('.rando-but').addClass('top');
-       } else {
+       } else if (rando >= 3) {
+             $('.rando-but').addClass('top3');
+       }
+       else {
              $('.rando-but').addClass('top2');
        
        }
