--- a/JSandbox.html
+++ b/JSandbox.html
@@ -90,7 +90,7 @@ var name = prompt("What is your name?");
  
  $('.rando-but').on('click', function() {
        var rando = Math.random()*10;
-       $('.rando').append('Eyes: '+rando);
+       $('.rando').append('!');
        if (rando >= 7) {
              $('.rando-but').addClass('top');
        } else if (rando >= 3) {
