--- a/JSandbox.html
+++ b/JSandbox.html
@@ -92,11 +92,14 @@ var name = prompt("What is your name?");
        var rando = Math.random()*10;
        $('.rando').append('!');
        if (rando >= 7) {
+             $('.rando-but').removeClass('top2');
+             $('rando-but').removeClass('top3');
              $('.rando-but').addClass('top');
        } else if (rando >= 3) {
              $('.rando-but').addClass('top3');
        }
        else {
+             $('.rando-but').removeClass('top3');
              $('.rando-but').addClass('top2');
        
        }
