--- a/JSandbox.html
+++ b/JSandbox.html
@@ -96,10 +96,13 @@ var name = prompt("What is your name?");
              $('rando-but').removeClass('top3');
              $('.rando-but').addClass('top');
        } else if (rando >= 3) {
+              $('rando-but').removeClass('top');
+              $('.rando-but').removeClass('top2');
              $('.rando-but').addClass('top3');
        }
        else {
              $('.rando-but').removeClass('top3');
+             $('rando-but').removeClass('top');
              $('.rando-but').addClass('top2');
        
        }
