--- a/JSandbox.html
+++ b/JSandbox.html
@@ -72,7 +72,7 @@ width: 509px;
   </div>
   </div>
   <div class="container well col-md-6 col-md-offset-3"><button class='rando-but'> Random Eyes </button><span class='rando'>  </span></div>
-  <div class="container well col-md col-md-offset-3"><button class='rando-but2'> Random Nose </button><span class='rando2'> </span></div>
+  <div class="container well col-md-6 col-md-offset-3"><button class='rando-but2'> Random Nose </button><span class='rando2'> </span></div>
   
  
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
