--- a/JSandbox.html
+++ b/JSandbox.html
@@ -71,9 +71,10 @@ width: 509px;
        <span class="message">: </span>
   </div>
   </div>
-  <div class="container well col-md-6 col-md-offset-3"><button class='rando-but'> Random Eyes </button><span class='rando'>  </span></div>
-  <div class="container well col-md-6 col-md-offset-3"><button class='rando-but2'> Random Nose </button><span class='rando2'> </span></div>
-  
+  <div class="container well col-md-6 col-md-offset-3">
+  <div class="row col-md-6 col-md-offset-3"><button class='rando-but'> Random Eyes </button><span class='rando'>  </span></div>
+  <div class="row col-md-6 col-md-offset-3"><button class='rando-but2'> Random Nose </button><span class='rando2'> </span></div>
+  </div>
  
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
