--- a/JSandbox.html
+++ b/JSandbox.html
@@ -105,16 +105,16 @@ var name = prompt("What is your name?");
        $('.rando').append('!');
        if (rando >= 7) {
              $('.rando-but').removeClass('top2');
-             $('rando-but').removeClass('top3');
+             $('.rando-but').removeClass('top3');
              $('.rando-but').addClass('top');
        } else if (rando >= 3) {
-              $('rando-but').removeClass('top');
+              $('.rando-but').removeClass('top');
               $('.rando-but').removeClass('top2');
              $('.rando-but').addClass('top3');
        }
        else {
              $('.rando-but').removeClass('top3');
-             $('rando-but').removeClass('top');
+             $('.rando-but').removeClass('top');
              $('.rando-but').addClass('top2');
        
        }
@@ -124,7 +124,7 @@ var name = prompt("What is your name?");
        $('.rando2').append('!');
        if (rando >= 7) {
              $('.rando-but2').removeClass('middle2');
-             $('rando-but2').removeClass('middle3');
+             $('.rando-but2').removeClass('middle3');
              $('.rando-but2').addClass('middle');
        } else if (rando >= 3) {
               $('rando-but2').removeClass('middle');
@@ -133,7 +133,7 @@ var name = prompt("What is your name?");
        }
        else {
              $('.rando-but2').removeClass('middle3');
-             $('rando-but2').removeClass('middle');
+             $('.rando-but2').removeClass('middle');
              $('.rando-but2').addClass('middle2');
        
        }
