--- a/JSandbox.html
+++ b/JSandbox.html
@@ -138,7 +138,7 @@ var name = prompt("What is your name?");
              $('.rando-but2').removeClass('middle3');
              $('.rando-but2').addClass('middle');
        } else if (rando >= 3) {
-              $('rando-but2').removeClass('middle');
+              $('.rando-but2').removeClass('middle');
               $('.rando-but2').removeClass('middle2');
              $('.rando-but2').addClass('middle3');
        }
@@ -157,7 +157,7 @@ var name = prompt("What is your name?");
              $('.rando-but3').removeClass('bottom3');
              $('.rando-but3').addClass('bottom');
        } else if (rando >= 3) {
-              $('rando-but3').removeClass('bottom');
+              $('.rando-but3').removeClass('bottom');
               $('.rando-but3').removeClass('bottom2');
              $('.rando-but3').addClass('bottom3');
        }
