--- a/JSandbox.html
+++ b/JSandbox.html
@@ -50,7 +50,7 @@ width: 509px;
 .bottom2 {
       background-image: url("https://lh4.googleusercontent.com/-rHdueemzQ4k/VOCzowsil5I/AAAAAAAAArM/fhhuQ9Fr6cw/w528-h163-no/Glassesbottom.png");
       height: 147px;
-      width 509px;
+      width: 509px;
 }
 .bottom3 {
       background-image: url("https://lh5.googleusercontent.com/-NNUfG-R5PlA/VOCzpyxUTqI/AAAAAAAAArs/M36K3MBAhOY/w507-h123-no/starbottom.png");
@@ -113,8 +113,7 @@ var name = prompt("What is your name?");
  
  $('.rando-but').on('click', function() {
        var rando = Math.random()*10;
-       $('.rando').append('!');
-       if (rando >= 7) {
+              if (rando >= 7) {
              $('.rando-but').removeClass('top2');
              $('.rando-but').removeClass('top3');
              $('.rando-but').addClass('top');
@@ -132,8 +131,7 @@ var name = prompt("What is your name?");
  });
  $('.rando-but2').on('click', function() {
        var rando = Math.random()*10;
-       $('.rando2').append('!');
-       if (rando >= 7) {
+             if (rando >= 7) {
              $('.rando-but2').removeClass('middle2');
              $('.rando-but2').removeClass('middle3');
              $('.rando-but2').addClass('middle');
@@ -151,8 +149,7 @@ var name = prompt("What is your name?");
  });
  $('.rando-but3').on('click', function() {
        var rando = Math.random()*10;
-       $('.rando3').append('!');
-       if (rando >= 7) {
+              if (rando >= 7) {
              $('.rando-but3').removeClass('bottom2');
              $('.rando-but3').removeClass('bottom3');
              $('.rando-but3').addClass('bottom');
