--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
   <p><a href="http://github.com/LeahW" data-target="#" class="navbar-brand"><b>GitHub Page for LeahW</b></a></p>
   </div>
   </div>
-  <div class="container col-md-6 col-md-offset-3">
+  <div class="container col-md-6">
   <div class="hidden-xs hidden-sm">
     <img src="https://lh3.googleusercontent.com/-AjXUeYFANjY/VLfi2vwYezI/AAAAAAAAAj4/i14h3u3LIu4/w923-h615-no/RaspberryPiinhand.jpg" height="369" width="554" class="img-circle"> </img>
    </div> 
   </div>
+  <div class="container well col-md-6">
+ <h3><a href="https://LeahW.github.io/JSandbox.html"> JS.andbox </a></a></h3>
+ <p>A sandbox page where I test various bits of JavaScript that I'm learning. Frequently changes. Feel free to click around and explore! </p>
+ </div>
     <div class="row col-md-12 whitespace"></div>
   
   <div class="container well col-md-10 col-md-offset-1">
@@ -34,9 +38,7 @@
   </div>
 </div>
 <div class="row col-md-12 whitespace"></div>
-<div class="container well col-md-6 col-md-offset-3">
- <h3><a href="https://LeahW.github.io/JSandbox.html"> JS.andbox </a></a></h3>
- <p>A sandbox page where I test various bits of JavaScript that I'm learning. Frequently changes. Feel free to click around and explore! </p>
+
  
 </div>
     
