--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
    </div> 
   </div>
   <div class="container well col-md-4">
-  <div class="row col-md-4 whitespace"></div>
+  <div class="row col-md-4 whitespace">
  <h2><a href="https://LeahW.github.io/JSandbox.html"> JS.andbox </a></a></h2>
- <div class="row col-md-4 whitespace"></div>
+ </div>
+ <div class="row col-md-4 whitespace">
  <p>A sandbox page where I test various bits of JavaScript that I'm learning. Frequently changes. Feel free to click around and explore! </p>
+ </div>
  </div>
     <div class="row col-md-12 whitespace"></div>
   
