--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
    </div> 
   </div>
   <div class="container well col-md-4">
-  <div class="col-md-4 whitespace">
+  <div class="col-md-4">
  <h2><a href="https://LeahW.github.io/JSandbox.html"> JS.andbox </a></a></h2>
  <br>
  <p>A sandbox page where I test various bits of JavaScript that I'm learning. Frequently changes. Feel free to click around and explore! </p>
  </div>
  </div>
-    <div class="row col-md-12 whitespace"></div>
+    <div class="row col-md-12"></div>
   
   <div class="container well col-md-10 col-md-offset-1">
     <div class="row text-center">
