--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <img src="https://lh3.googleusercontent.com/-AjXUeYFANjY/VLfi2vwYezI/AAAAAAAAAj4/i14h3u3LIu4/w923-h615-no/RaspberryPiinhand.jpg" height="369" width="554" class="img-circle"> </img>
    </div> 
   </div>
+  <div class="row col-md-5"></div>
   <div class="container well col-md-4">
    <h2><a href="https://LeahW.github.io/JSandbox.html"> JS.andbox </a></a></h2>
  <br>
