--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
   </div>
   <div class="col-md-4 emptyrow"></div>
   <div class="container well col-md-4">
-   <h2><a href="https://LeahW.github.io/JSandbox.html"> JS.andbox </a></a></h2>
+   <h3><a href="https://LeahW.github.io/JSandbox.html"> JS.andbox </a></a></h3>
  <br>
- <p>A sandbox page where I test various bits of JavaScript that I'm learning. Frequently changes. Feel free to click around and explore! </p>
- 
- </div>
+ <p class="lead">A sandbox page where I test various bits of JavaScript that I'm learning. Frequently changes. Feel free to click around and explore! </p>
+  </div>
+  <div class="container well col-md-4">
+   <h3><a href="https://LeahW.github.io/regex.html"> Regex </a></a></h3>
+ <br>
+ <p class="lead"> A page to test regular expressions.</p>
+  </div>
     <div class="row col-md-12 whitespace"></div>
   
   <div class="container well col-md-10 col-md-offset-1">
