--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
   <div class="container well col-md-4">
    <h3><a href="https://LeahW.github.io/JSandbox.html"> JS.andbox </a></a></h3>
  <br>
- <p class="lead">A sandbox page where I test various bits of JavaScript that I'm learning. Frequently changes. Feel free to click around and explore! </p>
+ <p> A sandbox page for JavaScript. Frequently changes. Feel free to click around and explore! </p>
   </div>
   <div class="container well col-md-4">
    <h3><a href="https://LeahW.github.io/regex.html"> Regex </a></a></h3>
  <br>
- <p class="lead"> A page to test regular expressions.</p>
+ <p> A page to test regular expressions.</p>
   </div>
     <div class="row col-md-12 whitespace"></div>
   
