--- a/JSandbox.html
+++ b/JSandbox.html
@@ -81,7 +81,8 @@ width: 509px;
   <div class="row col-md-6 col-md-offset-3"><button class='rando-but2'> Random Nose </button><span class='rando2'> </span></div>
   <div class="row col-md-6 col-md-offset-3"><button class='rando-but3'> Random Mouth </button><span class='rando3'> </span></div>
   </div>
- 
+  <br>
+ <p>  Back to <a href="http://leahw.github.io/">leahw.github.io</a></p>
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 <script>
