--- a/JSandbox.html
+++ b/JSandbox.html
@@ -82,9 +82,9 @@ width: 509px;
   <div class="row col-md-6 col-md-offset-3"><button class='rando-but3'> Random Mouth </button><span class='rando3'> </span></div>
   </div>
   <br>
-  <div class="container col-md-4 col-md-offset-4">
+  <div class="container col-md-5 col-md-offset-3">
   <br>
- <p>  Back to <a href="http://leahw.github.io/">leahw.github.io</a></p>
+ <p class='lead'>  Back to <h3><a href="http://leahw.github.io/">leahw.github.io</a></h3></p>
  </div>
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
