--- a/JSandbox.html
+++ b/JSandbox.html
@@ -84,7 +84,7 @@ width: 509px;
   <br>
   <div class="container col-md-5 col-md-offset-3">
   <br>
- <p class='lead'>  Back to <h3><a href="http://leahw.github.io/">leahw.github.io</a></h3></p>
+ <p>  Back to <h4><a href="http://leahw.github.io/">leahw.github.io</a></h4></p>
  </div>
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
