--- a/regex.html
+++ b/regex.html
@@ -1,2 +1,14 @@
+<head>
+<title>Regex</title>
+<link rel="stylesheet" type="text/css" href="/css/main.css">
+<style>
+</style
+<body>
 <h2> Landing screen for future Regex practice page </h2>
+<div class='container well col-md-8 col-md-offset-2'></div>
 <p>  Back to <a href="http://leahw.github.io/">leahw.github.io</a></p>
+<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+<script>
+</script>
+</body>
