--- a/regex.html
+++ b/regex.html
@@ -6,7 +6,7 @@
 <body>
 <h2> Landing screen for future Regex practice page </h2>
 <div class='container well col-md-8 col-md-offset-2'>
-  <button class=textCount> Count the number of 'e' letters!</button>
+  <button class=textCount> Did you type an 'e'? </button>
   <span class='response'></span>
 </div>
 <div class='container col-md-8 col-md-offset-2'>
