--- a/regex.html
+++ b/regex.html
@@ -6,7 +6,13 @@
 <body>
 <h2> Landing screen for future Regex practice page </h2>
 <div class='container well col-md-8 col-md-offset-2'>
-  <button class=textCount> Did you type an 'e'? </button>
+<div class='container well col-md-8 col-md-offset-2 paragraph'>
+<p class='lead'>Sample text:</p>
+<br>
+<p>Have you written your code yet? During Computer Science Education Week (Dec. 8 - Dec. 14) the non-profit educational foundation Code.org is encouraging everyone to participate in writing an 'Hour of Code'. Schools across the country have taken up the challenge, as have adults, and even public figures. A visit to www.code.org or a search for 'Hour of Code' will yield countless free tutorials for you to try, including many that require little more than dragging and dropping puzzle piece-like shapes on your screen. In fact, this simple drag-and-drop editor is exactly what Barack Obama used to code a drawing of a square this week -- and in doing so, he became the first President to write code!</p>
+
+</div>
+  <button class=textCount> Find and replace a word </button>
   <span class='response'></span>
 </div>
 <div class='container col-md-8 col-md-offset-2'>
@@ -17,9 +23,10 @@
 <script>
 
 $('.textCount').on('click', function() {
-  var sampleText = prompt("Please enter some text here!");
-  var patE = /e/;
-  var response = patE.test(sampleText);
+  var sampleText = 'Have you written your code yet? During Computer Science Education Week (Dec. 8 - Dec. 14) the non-profit educational foundation Code.org is encouraging everyone to participate in writing an 'Hour of Code'. Schools across the country have taken up the challenge, as have adults, and even public figures. A visit to www.code.org or a search for 'Hour of Code' will yield countless free tutorials for you to try, including many that require little more than dragging and dropping puzzle piece-like shapes on your screen. In fact, this simple drag-and-drop editor is exactly what Barack Obama used to code a drawing of a square this week -- and in doing so, he became the first President to write code!';
+  var findText = prompt("Please enter any one word from above paragraph");
+  var replaceText = prompt("Please choose a word to replace it");
+  var response = str.replace(findText, replaceText);
   $('.response').append(response);
   
 })
