--- a/regex.html
+++ b/regex.html
@@ -1,10 +1,11 @@
 <head>
-<title>Regex</title>
+<title>Regex Practice</title>
 <link rel="stylesheet" type="text/css" href="/css/main.css">
 <style>
 </style
 <body>
-<h2> Landing screen for future Regex practice page </h2>
+<h2> Regex practice page </h2>
+<br>
 <div class='container well col-md-8 col-md-offset-2'>
 <div class='container well col-md-8 col-md-offset-2 paragraph'>
 <p class='lead'>Sample text:</p>
