--- a/regex.html
+++ b/regex.html
@@ -36,7 +36,8 @@ $('.fAndR').on('click', function() {
 });
 $('isThere').on('click', function() {
   var sampleText = 'I am a Stay at Home Mom with a background in Tech Support. Interested in modification projects for Kano and Robomow, as well as Front-end web design.';
-      var response2 = /e/.test(sampleText);
+      var patt = /e/;
+      var response2 = patt.test(sampleText);
   $('.response2').append(response2);
 });
 </script>
