--- a/regex.html
+++ b/regex.html
@@ -34,9 +34,9 @@ $('.fAndR').on('click', function() {
   $('.response').append(response);
   
 });
-$('isThere').on('click', function() {
+$('.isThere').on('click', function() {
     var patt = /e/;
-      var response2 = patt.test(sampleText);
+    var response2 = patt.test(sampleText);
   $('.response2').append(response2);
 });
 </script>
