--- a/regex.html
+++ b/regex.html
@@ -35,8 +35,8 @@ $('.fAndR').on('click', function() {
   
 });
 $('.isThere').on('click', function(patt) {
-    var patt = prompt('Please enter a character')
-    var response2 = var patt.test(sampleText);
+    var text2 = prompt('Please enter some text!')
+    var response2 = /e/.test(text2);
   $('.response2').append(response2);
 });
 </script>
