--- a/regex.html
+++ b/regex.html
@@ -36,7 +36,7 @@ $('.fAndR').on('click', function() {
 });
 $('.isThere').on('click', function(patt) {
     var text2 = prompt('Please enter some text!')
-    var response2 = /e/.test(text2);
+    var response2 = /e/.exec(text2);
   $('.response2').append(response2);
 });
 </script>
