--- a/regex.html
+++ b/regex.html
@@ -17,6 +17,7 @@
   <button class='fAndR'> Find and replace a word </button>
     <span class='response'></span>
     </div>
+    <div class='row col-md-8 col-md-offset-2'></div>
     <div class='row col-md-8 col-md-offset-2'>
     <button class='isThere'> Which vowels have you used? </button>
     <span class='response2'></span>
