--- a/regex.html
+++ b/regex.html
@@ -2,6 +2,9 @@
 <title>Regex Practice</title>
 <link rel="stylesheet" type="text/css" href="/css/main.css">
 <style>
+.whitespace {
+  margin: 10px 40px;
+}
 </style
 <body>
 <h2> Regex practice page </h2>
@@ -17,7 +20,7 @@
   <button class='fAndR'> Find and replace a word </button>
     <span class='response'></span>
     </div>
-    <div class='row col-md-8 col-md-offset-2'></div>
+    <div class='row col-md-8 col-md-offset-2 whitespace'></div>
     <div class='row col-md-8 col-md-offset-2'>
     <button class='isThere'> Which vowels have you used? </button>
     <span class='response2'></span>
