--- a/regex.html
+++ b/regex.html
@@ -20,12 +20,15 @@
   <button class='fAndR'> Find and replace a word </button>
     <span class='response'></span>
     </div>
-    <div class='row col-md-8 col-md-offset-2 whitespace'></div>
+    </div>
+    
+    <div class='container well col-md-8 col-md-offset-2'>
     <div class='row col-md-8 col-md-offset-2'>
     <button class='isThere'> Which vowels have you used? </button>
     <span class='response2'></span>
     </div>
-</div>
+    </div>
+
 <div class='container col-md-8 col-md-offset-2'>
 <p>  Back to <a href="http://leahw.github.io/">leahw.github.io</a></p>
 </div>
