--- a/regex.html
+++ b/regex.html
@@ -21,7 +21,8 @@
     <span class='response'></span>
     </div>
     </div>
-    
+    <div class='col-md-12 whitespace'></div>
+    <br>
     <div class='container well col-md-8 col-md-offset-2'>
     <div class='row col-md-8 col-md-offset-2'>
     <button class='isThere'> Which vowels have you used? </button>
