--- a/BWKbot.html
+++ b/BWKbot.html
@@ -25,6 +25,8 @@ function Question(ques, ans, value) {
   this.ask = function() { $('.question1').append(ques);
   };
   
-  new Question('Is it raining?', 'yes', 5);
+  var Num1 = new Question('Is it raining?', 'yes', 5);
+  Num1.ask();
+  
 </script>
 </body>
