--- a/BWKbot.html
+++ b/BWKbot.html
@@ -26,7 +26,7 @@ function Question(ques, ans, value) {
   };
   
   var Num1 = new Question('Is it raining?', 'yes', 5);
-  Num1.ask();
+  Num1.ask;
   
 </script>
 </body>
