--- a/BWKbot.html
+++ b/BWKbot.html
@@ -20,16 +20,12 @@
 <script>
 
 $('.qb1').on('click', function() {
-function Question(ques, ans, value) {
-  this.ques = ques;
-  this.ans = ans;
-  this.value = value;
-  this.ask = function() { $('.question1').append(ques);
+ $('.question1').append('it works');
   };
   
 
-  var Num1 = new Question('Is it raining?', 'yes', 5);
-  Num1.ask();
+ /* var Num1 = new Question('Is it raining?', 'yes', 5);
+  Num1.ask(); */
 });
   
 </script>
