--- a/BWKbot.html
+++ b/BWKbot.html
@@ -25,8 +25,8 @@ $('.qb1').on('click', function() {
   
 
  /* var Num1 = new Question('Is it raining?', 'yes', 5);
-  Num1.ask(); */
+  Num1.ask(); 
 });
-  
+  */
 </script>
 </body>
