--- a/BWKbot.html
+++ b/BWKbot.html
@@ -23,7 +23,7 @@ $('.qb1').on('click', function() {
 function Question(ques) {
   this.ques = ques;
   this.ask = function() {
-    $('.question1').append('it works');
+    $('.question1').append(ques);
   };
 };
 
