--- a/BWKbot.html
+++ b/BWKbot.html
@@ -24,6 +24,7 @@ function Question(ques) {
   this.ques = ques;
   this.ask = function() {
     $('.question1').append(ques);
+    $('.question1').append("<button class='ab1'> Yes </button>");
   };
 };
 
