--- a/BWKbot.html
+++ b/BWKbot.html
@@ -12,6 +12,8 @@
 </div>
 <div class="container well col-md-8 col-md-offset-2">
 <button class='qb1'>Question 1: </button>
+</div>
+<div class="container well col-md-8 col-md-offset-2">
   <span class='question1'></span>
 </div>
 <body>
