--- a/BWKbot.html
+++ b/BWKbot.html
@@ -28,7 +28,7 @@ function Question(ques) {
   this.ques = ques;
   this.ask = function() {
     $('.question1').append(ques+"      ");
-    $('.question1').append("<button class='ab1'> Yes </button>");
+    $('.question1').append("<button class='ab1y'> Yes </button>       <button class='ab1n'> No </button>");
   };
 };
 
